--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,8 @@ url: "http://www.seedplus.com" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+gems:
+  - jekyll-redirect-from
+
+whitelist:
+  - jekyll-redirect-from
