--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ description: > # this means to ignore newlines until "baseurl:"
   A new kind of seed venture firm: A one-of-a-kind network, bigger checks and with founders every day.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.seedplus.com" # the base hostname & protocol for your site
+linkedin-url: "https://www.linkedin.com/company/seedplus"
+twitter-url: "https://twitter.com/seedplusvc"
 
 # Build settings
 markdown: kramdown
