--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ twitter-url: "https://twitter.com/seedplusvc"
 
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-redirect-from
 
 whitelist:
