Re-do the calendar page structure

--- a/_data/calendar.yaml
+++ b/_data/calendar.yaml
@@ -17,3 +17,8 @@ authors:
     label: 'Gabriel Lundberg'
   - tag: 'chirayu'
     label: 'Chirayu Wadke'
+archive:
+  years:
+    - 2018
+    - 2017
+    - 2016
