--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ collections:
   notes:
     output: true
     permalink: '/calendar/:title'
+  portfolio:
+    output: false
 
 defaults:
   - scope:
