--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: SeedPlus
 description: > # this means to ignore newlines until "baseurl:"
-  A new kind of seed venture firm: A one-of-a-kind network, bigger checks and with founders every day.
+  A new kind of seed venture firm, now closed to new investments.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.seedplus.com" # the base hostname & protocol for your site
 
